force-app/main/default/objects/Partner_Incentive_Payment__c/Partner_Incentive_Payment__c.object-meta.xml
<CustomObject>
    <label>Partner Incentive Payment</label>
    <pluralLabel>Partner Incentive Payments</pluralLabel>
    <nameField>
        <displayFormat>PIP-{00000000}</displayFormat>
        <label>Partner Incentive Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>