force-app/main/default/objects/Partner_Incentive_Payment__c/fields/External_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Transaction_Id__c</fullName>
    <label>External Transaction Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>