force-app/main/default/objects/Partner_Incentive_Payment__c/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <label>Incentive</label>
    <type>Lookup</type>
    <referenceTo>Partner_Incentive__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <required>true</required>
</CustomField>