force-app/main/default/objects/Partner_Incentive_Payment__c/fields/Paid_On__c.field-meta.xml
<CustomField>
    <fullName>Paid_On__c</fullName>
    <label>Paid On</label>
    <type>DateTime</type>
</CustomField>