force-app/main/default/objects/Partner_Incentive_Payment__c/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <label>Payment Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>