force-app/main/default/objects/Partner_Incentive_Payment__c/fields/Payment_System__c.field-meta.xml
<CustomField>
    <fullName>Payment_System__c</fullName>
    <label>Payment System</label>
    <length>40</length>
    <type>Text</type>
</CustomField>