force-app/main/default/objects/Partner_Incentive_Payment__c/fields/Scheduled_On__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_On__c</fullName>
    <label>Scheduled On</label>
    <type>DateTime</type>
</CustomField>